ops/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitnesstracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fitnesstracker
  template:
    metadata:
      labels:
        app: fitnesstracker
    spec:
      containers:
        - name: fitnesstracker
          image: cyrilbaah/fitnesstracker
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
