ops/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fitnesstracker
spec:
  rules:
    - host: fitnesstracker.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fitnesstracker
                port:
                  number: 8000
